[gd_scene load_steps=9 format=3 uid="uid://cutkc7mmilbft"]

[ext_resource type="Script" path="res://UI/game_ui.gd" id="1_ibbor"]
[ext_resource type="PackedScene" uid="uid://8ta4yvucudcg" path="res://ui/wave_ui.tscn" id="2_tci8h"]
[ext_resource type="PackedScene" uid="uid://35rty2hrer4y" path="res://GameScenes/EndGameMenu.tscn" id="3_axkg2"]
[ext_resource type="Texture2D" uid="uid://c2vl3q33q5q17" path="res://ui/images.jpg" id="4_d2e3y"]
[ext_resource type="Texture2D" uid="uid://duujvvxfjdtlr" path="res://ui/buttons/button_square_border.png" id="5_h8cqu"]
[ext_resource type="Texture2D" uid="uid://dsfg6oll0yc2" path="res://ui/buttons/button_round_line.png" id="6_rr32c"]
[ext_resource type="Texture2D" uid="uid://bl7yaiqialt8y" path="res://ui/buttons/button_square_depth_line.png" id="7_c51hb"]
[ext_resource type="Texture2D" uid="uid://bn4cb00cobami" path="res://ui/buttons/button_square_depth_border.png" id="8_sjvsr"]

[node name="debug_Game_UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ibbor")

[node name="wave_UI" parent="." instance=ExtResource("2_tci8h")]
visible = false
layout_mode = 1

[node name="EndGameUI" parent="." instance=ExtResource("3_axkg2")]
layout_mode = 1

[node name="T" type="TextureRect" parent="."]
modulate = Color(0, 0, 0, 0.188235)
custom_minimum_size = Vector2(0, 150)
layout_mode = 1
offset_right = 71.0
offset_bottom = 643.0
rotation = -6.28319
texture = ExtResource("4_d2e3y")
expand_mode = 1

[node name="M" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 1.0
offset_right = -952.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VB" type="VBoxContainer" parent="M"]
custom_minimum_size = Vector2(200, 150)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8

[node name="Start" type="TextureButton" parent="M/VB"]
clip_contents = true
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
texture_normal = ExtResource("5_h8cqu")
texture_pressed = ExtResource("6_rr32c")
stretch_mode = 0

[node name="Label" type="Label" parent="M/VB/Start"]
modulate = Color(0.917647, 0, 0.564706, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -19.0
offset_top = -11.5
offset_right = 19.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Start"

[node name="VB2" type="VBoxContainer" parent="M"]
custom_minimum_size = Vector2(60, 150)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="Tower1" type="TextureButton" parent="M/VB2"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture_normal = ExtResource("7_c51hb")
stretch_mode = 0

[node name="Label" type="Label" parent="M/VB2/Tower1"]
modulate = Color(0.916098, 2.98411e-06, 0.56446, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -19.0
offset_top = -12.0
offset_right = 39.0
offset_bottom = 11.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.7, 0.7)
text = "Tower1"

[node name="Tower2" type="TextureButton" parent="M/VB2"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 0
texture_normal = ExtResource("7_c51hb")

[node name="Label" type="Label" parent="M/VB2/Tower2"]
modulate = Color(0.917647, 0, 0.564706, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -21.0
offset_top = -11.0
offset_right = 37.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.7, 0.7)
text = "Tower2"

[node name="Tower3" type="TextureButton" parent="M/VB2"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 0
texture_normal = ExtResource("7_c51hb")
texture_pressed = ExtResource("8_sjvsr")
stretch_mode = 0

[node name="Label" type="Label" parent="M/VB2/Tower3"]
modulate = Color(0.917647, 0, 0.564706, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -21.0
offset_top = -11.0
offset_right = 37.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.7, 0.7)
text = "Tower3"

[node name="Enemy_+1" type="TextureButton" parent="M/VB2"]
layout_mode = 2
texture_normal = ExtResource("5_h8cqu")

[node name="Label" type="Label" parent="M/VB2/Enemy_+1"]
modulate = Color(0.917647, 0, 0.564706, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -24.0
offset_top = -8.0
offset_right = 51.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.7, 0.7)
text = "Enemy +1"

[node name="Delete_tower" type="TextureButton" parent="M/VB2"]
layout_mode = 2
texture_normal = ExtResource("5_h8cqu")

[node name="Label" type="Label" parent="M/VB2/Delete_tower"]
modulate = Color(0.917647, 0, 0.564706, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -10.0
offset_right = 61.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.7, 0.7)
text = "Delet tower"

[node name="Wall" type="TextureButton" parent="M/VB2"]
layout_mode = 2
texture_normal = ExtResource("5_h8cqu")

[node name="Label" type="Label" parent="M/VB2/Wall"]
modulate = Color(0.917647, 0, 0.564706, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -13.0
offset_top = -8.0
offset_right = 21.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.7, 0.7)
text = "Wall"

[connection signal="pressed" from="M/VB/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="M/VB2/Tower1" to="." method="_on_tower_1_pressed"]
[connection signal="pressed" from="M/VB2/Tower2" to="." method="_on_tower_2_pressed"]
[connection signal="pressed" from="M/VB2/Tower3" to="." method="_on_tower_3_pressed"]
[connection signal="pressed" from="M/VB2/Enemy_+1" to="." method="_on_enemy_1_pressed"]
[connection signal="pressed" from="M/VB2/Delete_tower" to="." method="_on_delet_tower_pressed"]
[connection signal="pressed" from="M/VB2/Delete_tower" to="." method="_on_delet_turret_pressed"]
[connection signal="pressed" from="M/VB2/Wall" to="." method="_on_wall_pressed"]
